--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,28 +17,16 @@ body {
     height: calc(100vh - 100px);
 }
 
-#fix-banner {
-    position: relative;
-    height: 100px;
-    background-color: rgba(0, 0, 0, 0.3);
-}
-
-#fix-banner a {
-    font-size: 14px;
-    color: white;
-    display: inline-block;
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translate(0, -50%);
-    padding: 10px 30px;
-    border: 1px solid white;
-    border-radius: 30px;
+button {
+    background-color: transparent;
+    border: none;
 }
 
 
 
-/* left sidebar section */
+/* ******************************
+left sidebar section general  */
+
 #sidebar {
     display: flex;
     flex-direction: column;
@@ -48,6 +36,8 @@ body {
     width: 250px;
     background-color: #000000;
     color: white;
+
+    overflow: hidden;
 }
 
 #sidebar * {
@@ -60,14 +50,25 @@ body {
 #sidebar-up h4,
 #playlist,
 #sidebar-down {
-    margin-left: 20px;
+    padding-left: 20px;
 }
 
 
 /* sidebar upper section */
+#logo-container {
+    position: relative;
+}
+
 #logo {
     max-width: 60%;
     margin-top: 20px;
+}
+
+#logo-small {
+    margin-left: 20px;
+    margin-top: 20px;
+    display: none;
+    max-width: 40%;
 }
 
 #icon-list {
@@ -81,16 +82,40 @@ body {
 .fa-solid {
     font-size: 25px;
     padding-right: 10px;
+    color: #a3a3a3;
 }
 
 .fa-lines-leaning {
     /* transform: scaleX(-1); */
 }
 
+.icon {
+    width: 30px;
+}
+
+
+
+
+
+
+
+
+
+#icon-list li:first-child {
+    border-left: 2px solid greenyellow;
+}
+
+
+
+
 
 #sidebar-up h4 {
     margin-top: 30px;
     color: white;
+}
+
+#playlist {
+    overflow: auto;
 }
 
 
@@ -108,6 +133,8 @@ body {
     display: block;
     padding-bottom: 10px;
     border-bottom: 1px solid #a3a3a3;
+    margin-right: 20px;
+
 }
 
 #sidebar-down a:nth-child(2) {
@@ -126,14 +153,8 @@ body {
 
 
 
-
-
-
-
-
-
-
-
+/* ****************************
+main content section general */
 
 main {
     overflow: auto;
@@ -142,9 +163,440 @@ main {
     background-color: #141922;
 }
 
-#footer {
+/* fixed banner section */
+#fix-banner {
+    /* position: relative; */
+    position: sticky;
+    top: 0;
     height: 100px;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+#fix-banner a {
+    font-size: 12px;
+    color: white;
+    display: inline-block;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translate(0, -50%);
+    padding: 10px 30px;
+    border: 1px solid white;
+    border-radius: 30px;
+}
+
+
+
+
+/* categories section */
+#categories-wrapper {
+    /* width: 60%; */
+    margin: 0 auto;
+    margin-top: 20px;
+}
+
+#categories {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+#categories a {
+    color: #a3a3a3;
+    font-size: 14px;
+    font-weight: 600;
+    margin: 0 20px;
+}
+
+#green-bar {
+    border-bottom: 2px solid greenyellow;
+    width: 50px;
+    margin: 5px auto;
+}
+
+
+
+
+/* album section general */
+.section-title {
+    color: white;
+}
+
+.section-subtitle {
+    margin-top: 10px;
+    color: #a3a3a3;
+    font-size: 13px;
+}
+
+#section-1-wrapper,
+#section-2-wrapper,
+#section-3-wrapper {
+    margin-top: 40px;
+}
+
+.album {
+    max-width: calc(95% / 6);
+}
+
+.album-img {
+    position: relative;
+}
+
+.album-img img {
+    max-width: 100%;
+}
+
+.album-icon-hover {
+    position: absolute;
+    color: white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+}
+
+#hover-icon {
+    font-size: 80px;
+}
+
+
+
+.album-title {
+    margin-top: 15px;
+    color: white;
+}
+
+.album-subtitle {
+    margin-top: 10px;
+    display: block;
+    color: #a3a3a3;
+    font-size: 13px;
+}
+
+.album-title,
+.album-subtitle {
+    text-align: center;
+}
+
+
+
+
+
+/* section 1 */
+#section-1 {
+    margin-top: 50px;
+    margin-left: 20px;
+}
+
+#section-1-wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+
+
+
+/* section 2 */
+#section-2 {
+    margin-top: 50px;
+    margin-left: 20px;
+}
+
+#section-2-wrapper {
+    display: flex;
+    justify-content: flex-start;
+    gap: 20px;
+    width: 90%;
+}
+
+
+
+
+/* section 3 */
+#section-3 {
+    margin-top: 50px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+
+#section-3-wrapper {
+    display: flex;
+    justify-content: flex-start;
+    gap: 20px;
+    width: 90%;
+}
+
+.album-img-section-3 img {
+    border-radius: 50%;
+}
+
+
+
+
+
+
+
+
+
+/* ****************************
+footer section general */
+
+#footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+    width: 100%;
     background-color: #282828;
+}
+
+#footer-title {
+    color: white;
+    font-size: 14px;
+}
+
+
+#footer-subtitle {
+    color: #a3a3a3;
+    font-size: 12px;
+}
+
+
+
+/* footer left section */
+#footer-left {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 250px;
+}
+
+#footer-img {
+    width: 40px;
+}
+
+#footer-img img {
+    max-width: 100%;
+}
+
+.fa-regular {
+    color: #a3a3a3;
+    font-size: 15px;
+}
+
+
+
+/* footer center section/player */
+#footer-center {
+    width: 50%;
+}
+
+
+#player {
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+/* controls */
+#control-section {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.footer-icon {
+    background-color: transparent;
+    color: white;
+    font-size: 12px;
+}
+
+.fa-play {
+    border: 2px solid white;
+    padding: 5px 7px 5px 9px;
+    border-radius: 30px;
+}
+
+
+
+#bar-section {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.player-time {
+    color: white;
+    padding: 0 30px;
+}
+
+
+
+
+/* progress bar */
+#progress-bar-wrapper {
+    position: relative;
+    width: 70%;
+}
+
+#progress-bar {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 4px;
+    width: 100%;
+    background-color: #a3a3a3;
+    border-radius: 2px;
+}
+
+#progress-fill {
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    height: 4px;
+    width: 50%;
+    background-color: white;
+}
+
+#progress-handle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background-color: #fff;
+
+    display: none;
+}
+
+
+
+
+
+
+
+/* footer right section */
+#footer-right {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 250px;
+}
+
+.footer-right-icon {
+    font-size: 15px;
+    margin-right: 10px;
+}
+
+
+
+/* volume bar */
+#volume-bar-wrapper {
+    position: relative;
+    width: 100px;
+    margin-right: 20px;
+}
+
+#volume-bar {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 4px;
+    width: 100%;
+    background-color: #a3a3a3;
+    border-radius: 2px;
+}
+
+#volume-fill {
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    height: 4px;
+    width: 50%;
+    background-color: white;
+}
+
+#volume-handle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background-color: #fff;
+
+    display: none;
+}
+
+
+
+
+
+
+
+/* hover effects */
+#fix-banner a:hover {
+    font-size: 14px;
+}
+
+#categories a:hover {
+    color: white;
+}
+
+#sidebar *:hover {
+    color: white;
+}
+
+#footer-subtitle:hover {
+    color: white;
+}
+
+.fa-regular:hover {
+    color: white;
+}
+
+.fa-play:hover {
+    color: white;
+    padding: 5px 7px 5px 9px;
+    border-radius: 30px;
+    font-size: 15px;
+}
+
+#progress-bar-wrapper:hover #progress-fill {
+    background-color: rgb(94, 240, 50);
+}
+
+#progress-bar-wrapper:hover #progress-handle {
+    display: block;
+}
+
+#volume-bar-wrapper:hover #volume-fill {
+    background-color: rgb(94, 240, 50);
+}
+
+#volume-bar-wrapper:hover #volume-handle {
+    display: block;
+}
+
+
+.album:hover .album-icon-hover {
+    display: block;
+}
+
+.album:hover img {
+    opacity: 0.5;
 }
 
 
@@ -158,26 +610,93 @@ main {
 
 
 
-/* ************
-MEDIA QUERY
-************ */
 
 
 
-@media screen and (max-width:480px) {
+/* ************************
+        MEDIA QUERY
+************************ */
 
-    /* blocco navigazione principale */
+@media screen and (max-width:1024px) {
+
+    #section-1-wrapper {
+        gap: 5px;
+        row-gap: 20px;
+        justify-content: flex-start;
+    }
+
+   .album {
+        max-width: calc(95% / 4);
+    }
+
+    .album-title {
+        font-size: 13px;
+    }
+    
+    .album-subtitle {
+        font-size: 11px;
+    }
+
+
+}
+
+
+
+@media screen and (max-width:768px) {
+
+    #footer-left, 
+    #footer-right {
+        width: 150px;
+    }
+
+    #footer-let-icon-wrapper {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .album {
+        max-width: calc(95% / 2);
+    }
+
+
+}
+
+
+
+
+
+
+@media screen and (max-width:530px) {
+
+    /* ******************************
+    left sidebar section general */
     #sidebar {
         width: 80px;
     }
 
+    /* sidebar upper section */
+    #logo {
+        display: none;
+    }
 
-    /* blocco di contenuto principale */
+    #logo-small {
+        display: block;
+    }
+
     #wrapper main {
         width: calc(100% - 80px);
     }
-    
+
     .hidden-sm {
+        display: none;
+    }
+
+
+    .album {
+        max-width: calc(95% / 2);
+    }
+
+    #footer-img {
         display: none;
     }
 
